package jeu;

import java.awt.*;

public class CaseChemin extends Case{
    @Override
    public Color getColor() {
        return Color.GREEN;
    }
}